devops/kubernetes/frontend/front-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: front-svc-v{version}
spec:
  selector:
    type: frontend
    version: "v-latest"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
