devops/kubernetes/frontend/front-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress-v{version}
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.ingress.kubernetes.io/proxy-read-timeout: '120'
    nginx.ingress.kubernetes.io/send-timeout: '120'
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - monthlylife.kro.kr
    secretName: ml-front-tls-secret
  rules:
  - host: monthlylife.kro.kr 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-svc-v{version}
            port:
              number: 80
